force-app/main/default/objects/Template__c/fields/AI_Instructions__c.field-meta.xml
<CustomField>
    <fullName>AI_Instructions__c</fullName>
    <label>AI Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>