force-app/main/default/objects/Template__c/fields/Context_Rules__c.field-meta.xml
<CustomField>
    <fullName>Context_Rules__c</fullName>
    <label>Context Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>