force-app/main/default/objects/Template__c/fields/CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>CreatedAt__c</fullName>
    <label>CreatedAt</label>
    <type>DateTime</type>
</CustomField>