force-app/main/default/objects/Template__c/fields/Merge_Tags__c.field-meta.xml
<CustomField>
    <fullName>Merge_Tags__c</fullName>
    <label>Merge Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>