force-app/main/default/objects/Template__c/fields/Processing_Rules__c.field-meta.xml
<CustomField>
    <fullName>Processing_Rules__c</fullName>
    <label>Processing Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>