force-app/main/default/objects/Template__c/fields/Template_Content__c.field-meta.xml
<CustomField>
    <fullName>Template_Content__c</fullName>
    <label>Template Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>