force-app/main/default/objects/Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <label>Template Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>