force-app/main/default/objects/Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Version__c</columns>
    <columns>Body__c</columns>
    <columns>Language__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>